--- a/4.html
+++ b/4.html
@@ -344,7 +344,7 @@
     <div class="guide-btn">
         <button class="enter-chat" id="openChat">
             <i class="fas fa-comment-dots"></i>
-            点击右下角悬浮窗开启智能咨询 | 聊天框支持自由拖动
+            点击右下角悬浮窗开启智能咨询
         </button>
     </div>
 
@@ -353,7 +353,7 @@
 
     <!-- 页面底部 -->
     <footer class="page-footer">
-        © 2026 社会实践小助手 | 由 <a href="https://www.coze.cn" target="_blank">字节跳动Coze</a> 提供智能技术支持
+        © 2026 社会实践小助手 | 由 字节跳动 提供智能技术支持
     </footer>
 
     <!-- 引入Coze Web SDK -->
@@ -474,10 +474,8 @@
                 },
                 footer: {
                     isShow: true,
-                    expressionText: '由 {{coze}} 提供智能技术支持',
-                    linkvars: {
-                        coze: { text: '字节跳动Coze', link: 'https://www.coze.cn/' }
-                    }
+                    expressionText: '由 字节跳动 提供智能技术支持',
+                    
                 },
                 conversations: {
                     isNeed: true,
@@ -510,4 +508,5 @@
         // 保留悬浮窗直显，无初始化隐藏
     </script>
 </body>
+
 </html>
