--- a/lulu.html
+++ b/lulu.html
@@ -837,7 +837,7 @@
                         },
                         footer: {
                             isShow: true,
-                            expressionText: '由 coze 提供智能技术支持',
+                            expressionText: '内容由AI生成，无法确保真实准确，仅供参考。',
                         },
                         conversations: {
                             isNeed: true,
@@ -1035,4 +1035,5 @@
 </body>
 
 </html>
+
 
